--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
     - docker
 
 before_install:
-    - docker build -t madhusudanmca/docker-react-travis Dockerfile.dev .
+    - docker build -t madhusudanmca/docker-react-travis -f Dockerfile.dev .
 
 script: 
     - docker run -r CI=true madhusudanmca/docker-react-travis npm run test
